# vibe-attack

./: .gitignore  =  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSES.md  README.md  about.hbs  about.toml  config.example.yaml  config.yaml  demo_hd2.yaml
.github/workflows/: ci.yml  release.yml
.gsd/: CODEBASE.md  DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  gsd.old  last-snapshot.md  metrics.json  notifications.jsonl  state-manifest.json
.gsd/activity/: 001-execute-task-M001-S04-T01.jsonl  002-execute-task-M001-S04-T01.jsonl  003-execute-task-M001-S04-T02.jsonl  004-execute-task-M001-S04-T03.jsonl  005-execute-task-M001-S04-T04.jsonl  006-execute-task-M001-S04-T05.jsonl  007-execute-task-M001-S04-T06.jsonl  008-execute-task-M001-S04-T07.jsonl  009-complete-slice-M001-S04.jsonl  010-research-slice-M001-S05.jsonl  011-plan-slice-M001-S05.jsonl  012-execute-task-M001-S05-T01.jsonl  013-execute-task-M001-S05-T02.jsonl  014-execute-task-M001-S05-T03.jsonl  015-complete-slice-M001-S05.jsonl  016-research-slice-M001-S06.jsonl  017-plan-slice-M001-S06.jsonl  018-execute-task-M001-S06-T01.jsonl  019-execute-task-M001-S06-T02.jsonl  020-execute-task-M001-S06-T03.jsonl  021-complete-slice-M001-S06.jsonl  022-research-slice-M001-S07.jsonl  023-plan-slice-M001-S07.jsonl  024-execute-task-M001-S07-T01.jsonl  025-execute-task-M001-S07-T02.jsonl  026-execute-task-M001-S07-T03.jsonl  027-complete-slice-M001-S07.jsonl  028-validate-milestone-M001.jsonl  029-complete-milestone-M001.jsonl  030-research-milestone-M007.jsonl  031-plan-milestone-M007.jsonl  032-execute-task-M007-S01-T01.jsonl  (+166 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
AppDir/: .DirIcon  AppRun  vibe-attack.desktop
docs/: configuration.md  latency-baseline.md  troubleshooting.md  uinput-setup.md
examples/: audio_probe.rs
packaging/: PKGBUILD  vibe-attack.spec
scripts/: setup.sh  verify-appimage.sh
src/: config.rs  error.rs  lib.rs  main.rs
tests/: concurrency_stress.rs  config_parse.rs  control_integration.rs  control_protocol.rs  daemon_headless.rs  dispatcher_logic.rs  distribution_proofs.rs  documentation.rs  drop_oldest_queue.rs  jsonl_schema.rs  macro_inject.rs  pack_editor_roundtrip.rs  pack_editor_state_roundtrip.rs  pack_hd2_bundle.rs  pack_hd2_coverage.rs  pack_lifecycle.rs  packaging.rs  profile_listing.rs  runtime_commands.rs  stt_smoke.rs  ui_distribution.rs  uinput_smoke.rs  wake_word.rs  wizard_proofs.rs
ui/: README.md  Wizard.jsx
(+973 files in other folders)
