[package]
name = "hd-linux-voice"
version = "0.1.0"
edition = "2021"
description = "Voice-macro daemon for Helldivers 2 on Linux"
license = "AGPL-3.0-only"
repository = "https://github.com/yourusername/hd-linux-voice"

[[bin]]
name = "hd-linux-voice"
path = "src/main.rs"

[dependencies]
cpal        = "0.17.3"
evdev       = { version = "0.13.2", features = ["serde"] }
ringbuf     = "0.4.8"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
xdg         = "3.0.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap        = { version = "4", features = ["derive"] }
tokio-util  = { version = "0.7", features = ["sync"] }
anyhow      = "1"
thiserror   = "1"

[dev-dependencies]
tempfile = "3"
