[package]
name = "vibe-attack"
version = "0.1.0"
edition = "2021"
description = "Voice-macro daemon for Helldivers 2 on Linux"
license = "AGPL-3.0-only"
repository = "https://github.com/chaleyeah/vibe-attack"

[[bin]]
name = "vibe-attack"
path = "src/main.rs"

[[bin]]
name = "vibe-attack-config"
path = "src/bin/vibe-attack-config.rs"
required-features = ["gui"]

[features]
default = []
stt = ["dep:whisper-rs"]
stt-vulkan = ["stt", "whisper-rs/vulkan"]
gui = ["dep:eframe", "dep:ureq", "dep:ksni", "dep:rfd"]

[dependencies]
cpal        = "0.15"
evdev       = { version = "0.13.2", features = ["serde"] }
ringbuf     = "0.4.8"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
xdg         = "3.0.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap        = { version = "4", features = ["derive"] }
tokio-util  = { version = "0.7" }
anyhow      = "1"
thiserror   = "1"
silero-vad-rust = "6.2.1"
ort = "=2.0.0-rc.10"
whisper-rs = { version = "0.16.0", optional = true }
eframe = { version = "0.34", optional = true, default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
ureq = { version = "2", optional = true }
sherpa-onnx = { version = "1.12.39", default-features = false, features = ["shared"] }
crossbeam-channel = "0.5.15"
serde_json = "1.0.149"
strsim = "0.11"
rodio = "0.17"
zip = "0.6"
ratatui = "0.30"
crossterm = "0.28"
ksni = { version = "0.3.4", optional = true, features = ["tokio"] }
rfd = { version = "0.17", optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

